# CryptoQuant

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  run_backtest.py  saved_params.json
Data/: BTCUSDT_data_download.py
Executor/: SimulationPlate.py
Strategy/: RSIStrategy.py  StrategyBase.py
data/: BTCUSDT_data_download.py
docs/: 02-数据下载指南.md  05-进阶功能.md
docs/notes/: 1 copy.km  TODO.md  a.md  ai.md  data_processing.md  quant_map.km  quant_map.md  strategies_types.md  useful_statistical_indicators.md
docs/tutorials/: 01-快速开始指南.md  02-数据下载指南.md  03-回测框架手册.md  04-策略开发教程.md  05-进阶功能.md
examples/: download.py
executor/: SimulationPlate.py
notebooks/data_process/: add_label.ipynb  crypto_data_download.ipynb  generate_bar.ipynb  generate_factor.ipynb  handle_price.ipynb
notebooks/research/: analyze_dollar_bar_stats.ipynb  analyze_dollar_bar_threshold.ipynb
script/: analyze_normality.py  calc_dynamic_threshold.py  crypto_data_download.py  generate_bar.py  generate_monthly_dollar_bars.py  get_btcusdt_data.py  km_to_md.py  merge_klines.py  plot_investment_formula.py  plot_num_bars.py  run_backtest.py  run_lstm_backtest.py  simulation_plate.py  tmp.py  train_lstm.py
src/backtest/: __init__.py  analyzers.py  data_loader.py  engine.py  lstm_backtest_helper.py  realtime_chart.py  strategies.py  visualizer.py
src/data_handler/: bar_generator.py  bar_rule.py  raw_data_downloader.py
src/data_loader/: __init__.py  bar_generator.py
src/ml/: __init__.py  lstm_model.py
src/strategies/: StrategyBase.py
src/strategy/: RSIStrategy.py
src/utils/: __init__.py  logger.py
tests/: test_bar_generator.py  test_bar_rule.py  test_data_handler.py  test_data_loader.py  test_logger.py  test_raw_data_downloader.py  test_strategy_return.py
wealth_planner/scripts/: plot_investment_formula.py
