[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoquant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "python-binance>=1.0.19",
  "pandas>=2.0",
  "ta-lib>=0.4.28",
  "numpy>=1.24",
  "python-dotenv>=1.0.0",
  "ccxt>=4.0.0",
  "tqdm>=4.65.0",
  "backtrader>=1.9.78",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "seaborn>=0.12.0",
  "zstandard>=0.22.0",
  "requests>=2.31.0",
  "scipy>=1.15.3",
  "loguru>=0.7.0",
  "statsmodels>=0.14.6",
  "numba>=0.63.1",
  "torch>=2.0.0",
  "scikit-learn>=1.3.0",
]

[tool.setuptools]
packages = ["src.strategies", "src.backtest", "src.data_handler", "src.utils", "src.ml"]

[tool.setuptools.package-data]
"*" = ["py.typed"]